Wordpress/05-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-mysql
  namespace: demo-wordpress
  labels:
    app: demo-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-mysql
  template:
    metadata:
      labels:
        app: demo-mysql
    spec:
      containers:
        - name: demo-mysql-container
          image: mysql:8
          imagePullPolicy: IfNotPresent      
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: '1Gi'
              cpu: '1'
          volumeMounts:
            - name: demo-mysql-init
              mountPath: /docker-entrypoint-initdb.d
            - name: demo-mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: demo-mysql-init
          configMap:
            name: demo-mysql-wp-config
        - name: demo-mysql-data    
          persistentVolumeClaim:
            claimName: demo-mysql-pvc
