Wordpress/06-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-mysql-service
  namespace: demo-wordpress
spec:
  selector:
    app: demo-mysql
  ports:
    - protocol: TCP
      port: 3306
